--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -13009,6 +13009,115 @@ a.sports-icon.floor-hockey {
   margin-top: 0;
 }
 
+.paragraph--type--secondary-description-sidebar {
+  background: #e5e5e5;
+  padding: 10px 0 20px 0;
+  margin-bottom: 20px;
+  color: #333333;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 200;
+  line-height: 1.4;
+}
+@media (min-width: 48em) {
+  .paragraph--type--secondary-description-sidebar {
+    margin-bottom: 40px;
+    padding: 0;
+  }
+}
+.paragraph--type--secondary-description-sidebar:before {
+  position: absolute;
+  top: 0;
+  left: 55%;
+  display: block;
+  width: 80%;
+  height: 100%;
+  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  background-image: linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  content: '';
+  -webkit-transform: skew(-30deg);
+  -moz-transform: skew(-30deg);
+  -ms-transform: skew(-30deg);
+  transform: skew(-30deg);
+}
+.paragraph--type--secondary-description-sidebar h2 {
+  color: #5e5e5e;
+  font-weight: bold;
+  margin-top: 0;
+  text-transform: uppercase;
+  font-size: 34px;
+  font-family: "Cachet", Verdana, Geneva, sans-serif;
+}
+.paragraph--type--secondary-description-sidebar a {
+  font-weight: bold;
+}
+.paragraph--type--secondary-description-sidebar ul {
+  padding: 0;
+}
+.paragraph--type--secondary-description-sidebar ul li {
+  position: relative;
+  margin: 5px 0;
+  padding-left: 20px;
+  list-style: none;
+}
+.paragraph--type--secondary-description-sidebar ul li:before {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  margin-right: 8px;
+  color: #bebcbc;
+  content: '>';
+  font-family: 'YMCA';
+}
+.paragraph--type--secondary-description-sidebar ul li a {
+  font-weight: bold;
+  font-family: 'Cachet', Helvetica, Arial, sans-serif;
+}
+.paragraph--type--secondary-description-sidebar .left {
+  font-size: 18px;
+  padding-left: 0;
+  padding-right: 0;
+}
+@media (min-width: 48em) {
+  .paragraph--type--secondary-description-sidebar .left {
+    margin-bottom: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 21px;
+  }
+}
+.paragraph--type--secondary-description-sidebar .right {
+  font-size: 18px;
+  padding-left: 0;
+  padding-right: 0;
+}
+@media (min-width: 48em) {
+  .paragraph--type--secondary-description-sidebar .right {
+    margin-bottom: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 21px;
+  }
+}
+.paragraph--type--secondary-description-sidebar .richtext .schedules:before {
+  margin-right: 5px;
+  content: 'm';
+  vertical-align: bottom;
+  text-transform: none;
+  font-weight: normal;
+  font-family: 'YMCA';
+  content: 'c';
+}
+.paragraph--type--secondary-description-sidebar .richtext .membership:before {
+  margin-right: 5px;
+  content: 'm';
+  vertical-align: bottom;
+  text-transform: none;
+  font-weight: normal;
+  font-family: 'YMCA';
+}
+
 a:focus,
 input:focus,
 select:focus,
